# rdupes

./: Cargo.toml  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: artifacts.yml  coverage.yml  nix.yml  rust-clippy.yml  rust-windows.yml  rust.yml
src/: finder.rs  hashing.rs  lib.rs  main.rs  traversal.rs  types.rs
