[package]
name = "rdupes"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/erikreed/rdupes"
license = "MIT"
description = "A rust port of pydupes. Super fast."


[dependencies]
blake3 = { version = "1.5", features = ["mmap"] }
ciborium = "0.2.2"
clap = { version = "4.5", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
closure = "0.3"
humansize = "2.1"
kdam = "0.5"
log = { features = ['release_max_level_info'], version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
mimalloc = { version = "0.1", default-features = false }
simple_logger = { features = ['stderr'], version = "4.3" }
tinyvec = { version = "1.8.0", features = ["alloc", "serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.12.0"

[profile.release]
opt-level = 3
lto = "fat"
